feat:MoreExceptions
execeptions added on product and category service

Gustavo G L P